WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
44450
fast/xsl/default-html.html fails with HTML5 fragment parsing
https://bugs.webkit.org/show_bug.cgi?id=44450
Summary
fast/xsl/default-html.html fails with HTML5 fragment parsing
Adam Barth
Reported
2010-08-23 12:37:52 PDT
fast/xsl/default-html.html fails with HTML5 fragment parsing
Attachments
Patch
(2.43 KB, patch)
2010-08-23 12:40 PDT
,
Adam Barth
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Barth
Comment 1
2010-08-23 12:40:03 PDT
Created
attachment 65152
[details]
Patch
Eric Seidel (no email)
Comment 2
2010-08-23 13:10:31 PDT
Comment on
attachment 65152
[details]
Patch Sigh.
Eric Seidel (no email)
Comment 3
2010-08-23 13:11:14 PDT
Ian should at least be made aware of this hack. Maybe he'd like to spec transformToFragment. :)
Ian 'Hixie' Hickson
Comment 4
2010-08-23 15:11:02 PDT
I disclaim all responsibility for anything relating to XSLT or XSL:FO.
Eric Seidel (no email)
Comment 5
2010-08-23 16:49:17 PDT
Comment on
attachment 65152
[details]
Patch Clearing flags on attachment: 65152 Committed
r65844
: <
http://trac.webkit.org/changeset/65844
>
Eric Seidel (no email)
Comment 6
2010-08-23 16:49:23 PDT
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 7
2010-08-23 17:29:31 PDT
http://trac.webkit.org/changeset/65844
might have broken GTK Linux 32-bit Release and Qt Linux Release The following changes are on the blame list:
http://trac.webkit.org/changeset/65843
http://trac.webkit.org/changeset/65844
http://trac.webkit.org/changeset/65845
http://trac.webkit.org/changeset/65846
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug